crates/aven-check/tests/fixtures/check/valid/comptime-tagsof-variant.av
Color = @{ @Red, @Green, @Blue }
Tags = tagsOf(Color)
c : Tags = "Red"
