crates/aven-check/tests/fixtures/check/invalid/comptime-tagsof-non-member.av
Color = @{ @Red, @Green, @Blue }
Tags = tagsOf(Color)
bad : Tags = "Purple"
